# TrackerHID

./: README.md
firmware/: .cproject  .gitignore  .project  README.md  sdkconfig
firmware/main/: CMakeLists.txt  config.h  config_t.h  hiddev.c  hiddev.h  idf_component.yml  imu.h  imu_bmi160.c  imu_bmi160.h  macros.h  main.c
